makes the banner the correct size on tablets

--- a/phmi/static/css/styles.scss
+++ b/phmi/static/css/styles.scss
@@ -182,7 +182,7 @@ header.masthead{
   .banner{
     height: 120px;
 
-    @media screen and (max-width: 480px){
+    @media screen and (max-width: 768px){
       height: 200px;
     }
   }
